2000-06-16  Chema Celorio  <chema@celorio.com>

	* window.c (gedit_window_set_status_bar): fix
	( still has problems with Mdi_mode=TOP_level)

	* gedit.c (main): change the order of initialization

	* view.c (gedit_view_get_position): add sanity check

	* file.c (gedit_file_open_ok_sel): fix a crash

2000-06-15  Chema Celorio  <chema@celorio.com>

	* prefs.c (gedit_prefs_save_settings): fix a g_warning if the windows is closed
	by clickin on the [X]

	* window.c (gedit_window_destroy): remove

2000-06-15  Chema Celorio  <chema@celorio.com>

	* print.c (file_print_cb): finish print_range = selection
	you will need to update gnome_print.

	* view.c (gedit_view_get_selection): if star_pos = end_pos
	selection is not active.

2000-06-15  Chema Celorio  <chema@celorio.com>

	* document.c (gedit_document_get_tab_name): mark strings for tranlation
	in a different way. They are not beeing tranlated.
	(gedit_document_set_title): mark string

	* dialogs/dialog-prefs.c (prepare_printing_page): dont' set print_lines sensitivity
	(print_lines_toggled): ditto

2000-06-15  Valek Filippov  <frob@df.ru>

	* search.c: microchange for i18n.

2000-06-15  Chema Celorio  <chema@celorio.com>

	* plugin.c (gedit_plugins_window_add): add hints to the plugin menu
	use plugin_data->description;

	* window.c (gedit_window_set_status_bar): fix the statusbar.

	* dialogs/dialog-replace.c (replace_text_clicked_cb): memleak fix

2000-06-14  Chema Celorio  <chema@celorio.com>

	* window.h (struct _GeditToolbar): new

	* undo.c (gedit_undo_redo): add the stuff needed to set the
	undo and redo buttons sensitivity
	(gedit_undo_undo): ditto

	* document.c (gedit_mdi_init): move mdi_open_toplevel here

	* dialogs/dialog-prefs.c (gedit_window_refresh): set toolbar_labels on/off
	* gedit.c (main): ditto
	* prefs.c (gedit_save_settings): 
	(gedit_load_settings): ditto
	* prefs.h (struct _Preferences): ditto

	* document.c (gedit_mdi_init): rename the "Files" menu to
	"Documents"
