@@ -82,10 +82,11 @@ gedit_window_new (GnomeMDI *mdi, GnomeApp *app)
 	};
 
 	static gint n_drag_types = sizeof (drag_types) / sizeof (drag_types [0]);
+	GtkWidget *statusbar;
 
 	gedit_debug ("", DEBUG_WINDOW);
 
-	g_print ("1. A\n");
+	/* Drag and drop support */
 	gtk_drag_dest_set (GTK_WIDGET(app),
 			   GTK_DEST_DEFAULT_MOTION |
 			   GTK_DEST_DEFAULT_HIGHLIGHT |
@@ -93,28 +94,31 @@ gedit_window_new (GnomeMDI *mdi, GnomeApp *app)
 			   drag_types, n_drag_types,
 			   GDK_ACTION_COPY);
 		
-	g_print ("2. A\n");
 	gtk_signal_connect (GTK_OBJECT (app), "drag_data_received",
 			    GTK_SIGNAL_FUNC (filenames_dropped), NULL);
 
-	g_print ("3. A\n");
+
+	/* Set the status bar */
+	statusbar = gnome_appbar_new (FALSE, TRUE, GNOME_PREFERENCES_USER);
+	gnome_app_set_statusbar (GNOME_APP (mdi->active_window),
+				 GTK_WIDGET (statusbar));
+	if (settings->show_status)
+		gtk_widget_show (statusbar);
+	gnome_app_install_menu_hints (GNOME_APP (mdi->active_window),
+				      gnome_mdi_get_menubar_info (mdi->active_window));
+
+	/* Set the window prefs. */
 	gedit_window_set_icon (GTK_WIDGET (app), "gedit_icon");
-
-	g_print ("4. A\n");
 	gtk_window_set_default_size (GTK_WINDOW(app), settings->width, settings->height);
-
-	g_print ("5. A\n");
 	gtk_window_set_policy (GTK_WINDOW (app), TRUE, TRUE, FALSE);
 
-	/*gedit_load_settings ();*/
-	/*
-	*/
-	
+	/* Add the recent files */
 	settings->num_recent = 0;
-
-	g_print ("6. A\n");
 	gedit_recent_update (GNOME_APP (app));
-	g_print ("7. A\n");
+
+	/* Add the plugins to the menus */
+	gedit_plugins_window_add (app);
+
 	
 
 }
@@ -150,18 +154,7 @@ gedit_window_set_icon (GtkWidget *window, char *icon)
 void
 gedit_window_set_status_bar (void)
 {
-	GtkWidget *statusbar;
 	gedit_debug ("", DEBUG_WINDOW);
-
-	if (!mdi->active_window->statusbar)
-	{
-		statusbar = gnome_appbar_new (FALSE, TRUE, GNOME_PREFERENCES_USER);
-		gnome_app_set_statusbar (GNOME_APP (mdi->active_window),
-					 GTK_WIDGET (statusbar));
-		gnome_app_install_menu_hints (GNOME_APP (mdi->active_window),
-					      gnome_mdi_get_menubar_info (mdi->active_window));
-		mdi->active_window->statusbar = statusbar;
-	}
 
 	if (mdi->active_window->statusbar->parent)
 	{
