@@ -1,3 +1,12 @@
+2000-06-17  Chema Celorio  <chema@celorio.com>
+
+	* window.c (gedit_window_new): fix the problems with mdi_mode = TOPLEVEL
+
+	* gedit.c (main): reorder the *_init_functions
+
+	* print.c (file_print_cb): #ifdef PRINT_SELECTION so that we can
+	compile against gnome-print-0.20
+
 2000-06-16  Chema Celorio  <chema@celorio.com>
 
 	* window.c (gedit_window_set_status_bar): fix
